# RealKV-Serve

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: qwen3_8b_fp16.yaml
docs/: ARCHITECTURE.md  INSTRUMENTATION.md  LIMITATIONS.md  REPRODUCIBILITY.md
realkv/: __init__.py  environment.py  generation.py  kv_observer.py  metrics.py  trace_schema.py
reports/milestone1/: COMMAND_OUTPUT_LOG.md  README.md  STATUS.md  runtime_support_verification.md
reports/milestone1/published/: README.md
reports/milestone1/raw/: README.md
scripts/: inspect_host.sh  pull_runtime.sh  run_baseline.sh  run_traced_request.sh  validate_milestone1.sh
tests/: test_metrics.py  test_scripts.sh  test_trace_invariants.py  test_trace_schema.py
