[project]
name = "realkv-serve"
version = "0.1.0"
description = "Source-verified TensorRT-LLM paged KV-cache lifecycle experiment"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["realkv*"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
